--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,14 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    "click>=8.1.8",
+    "pypdfium2==4.30.0",
+    "pydantic>=2.7.1,<3.0.0",
+    "pydantic-settings>=2.2.1,<3.0.0",
+    "numpy>=2.2.4",
+    "pillow>=10.3.0,<11.0.0"
+]
 
 [project.urls]
 Repository = "https://github.com/VikParuchuri/pdftext"
