--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "pydantic>=2.7.1,<3.0.0",
     "pydantic-settings>=2.2.1,<3.0.0",
     "numpy>=2.2.4",
-    "pillow>=10.3.0,<11.0.0"
+    "pillow>=10.3.0,<11.0.0",
+    "pytest>=8.3.5",
 ]
 
 [project.urls]
