--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "pydantic-settings>=2.2.1,<3.0.0",
     "numpy>=2.2.4",
     "pillow>=10.3.0,<11.0.0",
-    "pytest>=8.3.5",,
+    "pytest>=8.3.5",
     "mypy>=1.15.0",
 ]
 
