--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "pillow>=10.3.0,<11.0.0",
     "pytest>=8.3.5",
     "mypy>=1.15.0",
+    "aiofiles>=24.1.0",
 ]
 
 [project.urls]
